objects/Covid_Count__c/Covid_Count__c.object-meta.xml
<CustomObject>
    <label>Covid Count</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Covid Count Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Covid Counts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>