objects/Covid_Count__c/fields/Active_Cases__c.field-meta.xml
<CustomField>
    <fullName>Active_Cases__c</fullName>
    <description>This will count or track the total active cases</description>
    <inlineHelpText>Please enter total active cases for the day</inlineHelpText>
    <label>Active Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>