objects/Covid_Count__c/fields/Covid_Count_self_relationship__c.field-meta.xml
<CustomField>
    <fullName>Covid_Count_self_relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Covid Count self relationship</label>
    <referenceTo>Covid_Count__c</referenceTo>
    <relationshipLabel>Covid Counts</relationshipLabel>
    <relationshipName>Covid_Counts</relationshipName>
    <type>Lookup</type>
</CustomField>