objects/Covid_Count__c/fields/Is_Recovered_greater_than_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Is_Recovered_greater_than_Deceased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Recovered greater than Deceased?</label>
    <type>Checkbox</type>
</CustomField>