objects/Covid_Count__c/fields/Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name__c</fullName>
    <label>Manager Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>