objects/Covid_Count__c/fields/Primary_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Person__c</fullName>
    <label>Primary Contact Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Covid Count Cases</relationshipLabel>
    <relationshipName>Covid_Counts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>