objects/Covid_Count__c/fields/Total_Cases__c.field-meta.xml
<CustomField>
    <fullName>Total_Cases__c</fullName>
    <formula>Active_Cases__c + Total_Deceased_cases__c  +  Total_Recovered_Cases__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>