objects/Covid_Count__c/fields/Total_Deceased_cases__c.field-meta.xml
<CustomField>
    <fullName>Total_Deceased_cases__c</fullName>
    <inlineHelpText>please enter total deceased cases</inlineHelpText>
    <label>Total Deceased cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>