objects/Covid_Count__c/fields/Total_Recovered_Cases__c.field-meta.xml
<CustomField>
    <fullName>Total_Recovered_Cases__c</fullName>
    <inlineHelpText>please enter recovered cases for the day</inlineHelpText>
    <label>Total Recovered Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>