objects/Covid_Count__c/recordTypes/Delta_Variant_One.recordType-meta.xml
<RecordType>
    <fullName>Delta_Variant_One</fullName>
    <active>true</active>
    <description>This will track 2019 and 2020 covid cases</description>
    <label>Delta Variant One</label>
</RecordType>