objects/Covid_Count__c/recordTypes/Delta_Variant_two.recordType-meta.xml
<RecordType>
    <fullName>Delta_Variant_two</fullName>
    <active>true</active>
    <description>This will track 2021  and newer covid cases only</description>
    <label>Delta Variant two</label>
</RecordType>