objects/Covid_Count__c/validationRules/entry_date_should_not_be_todays_date.validationRule-meta.xml
<ValidationRule>
    <fullName>entry_date_should_not_be_todays_date</fullName>
    <active>true</active>
    <errorConditionFormula>Entry_Date__c   &lt;&gt;   TODAY()</errorConditionFormula>
    <errorDisplayField>Entry_Date__c</errorDisplayField>
    <errorMessage>Entry date should always be today&apos;s date</errorMessage>
</ValidationRule>