objects/Covid_Count__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active_Cases__c</columns>
    <columns>Day_Category__c</columns>
    <columns>Entry_Date__c</columns>
    <columns>Primary_Contact_Person__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>