objects/Covid_Count__c/listViews/Covid_Count_records_for_Admins.listView-meta.xml
<ListView>
    <fullName>Covid_Count_records_for_Admins</fullName>
    <columns>NAME</columns>
    <columns>Active_Cases__c</columns>
    <columns>Day_Category__c</columns>
    <columns>Entry_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>Covid Count Records For Admins</label>
    <sharedTo>
        <role>CEO</role>
    </sharedTo>
</ListView>