objects/Covid_Count__c/listViews/covid_count_records_for_managers.listView-meta.xml
<ListView>
    <fullName>covid_count_records_for_managers</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Active_Cases__c</columns>
    <filterScope>Mine</filterScope>
    <label>covid count records for managers</label>
    <sharedTo>
        <role>CFO</role>
    </sharedTo>
</ListView>